tests/snapshots/sfc/ts/script_setup__multiple_variable_declarations.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock, unref as _unref } from "vue"

const a = 1

export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

let b = 2
var c = 3

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(a) + " " + _toDisplayString(_unref(b)) + " " + _toDisplayString(_unref(c)), 1 /* TEXT */))
}
}

})
