tests/snapshots/sfc/ts/script_setup__nested_v_if_with_ref_should_not_duplicate_value.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 152
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { createElementVNode as _createElementVNode, normalizeClass as _normalizeClass, openBlock as _openBlock, createElementBlock as _createElementBlock, Fragment as _Fragment, createCommentVNode as _createCommentVNode } from "vue"

const _hoisted_1 = /*#__PURE__*/ _createElementVNode("span", null, "Alt")

import { ref } from 'vue';


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const mode = ref<'a' | 'b'>('a');

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, [
    (true)
      ? (_openBlock(), _createElementBlock(_Fragment, { key: 0 }, [
        (true)
          ? (_openBlock(), _createElementBlock("div", { key: 1 }, [
            _createElementVNode("button", {
              class: _normalizeClass({ active: mode.value === 'a' }),
              onClick: _cache[0] || (_cache[0] = ($event: any) => (mode.value = 'b'))
            }, "Test", 2 /* CLASS */)
          ]))
          : (false)
            ? (_openBlock(), _createElementBlock("div", { key: 2 }, [
              _hoisted_1
            ]))
          : _createCommentVNode("v-if", true)
      ], 64 /* STABLE_FRAGMENT */))
      : _createCommentVNode("v-if", true)
  ]))
}
}

})
