tests/snapshots/sfc/ts/script_setup__props_with_intersection_types.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


interface BaseProps {
  id: string
  name: string
}
interface ExtendedProps {
  extra: boolean
}


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    id: { type: String },
    name: { type: String },
    extra: { type: Boolean }
  },
  setup(__props: any) {


return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(__props.id) + " " + _toDisplayString(__props.name), 1 /* TEXT */))
}
}

})
