tests/snapshots/sfc/ts/script_setup__props_with_union_types.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


type ButtonVariant =
  | { type: "link"; href: string }
  | { type: "button"; onClick: () => void }


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    variant: { type: [null, Object] }
  },
  setup(__props: any) {


return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(__props.variant.type), 1 /* TEXT */))
}
}

})
