tests/snapshots/sfc/ts/script_setup__reactive_binding.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

import { reactive } from 'vue'


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const state = reactive({ count: 0 })

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(state.count), 1 /* TEXT */))
}
}

})
