tests/snapshots/sfc/ts/script_setup__reco_roundedbtn_pattern.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { renderSlot as _renderSlot, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


interface Props {
  outlined?: boolean;
  isWide?: boolean;
  mini?: boolean;
  disabled?: boolean;
  on?: Object;
  height?: number | string;
  color?: string;
}


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    outlined: { type: Boolean, required: false, default: false },
    isWide: { type: Boolean, required: false, default: false },
    mini: { type: Boolean, required: false },
    disabled: { type: Boolean, required: false, default: false },
    on: { type: Object, required: false, default: undefined },
    height: { type: [Number, String], required: false, default: '2rem' },
    color: { type: String, required: false, default: 'primary' }
  },
  setup(__props: any) {


return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("button", { disabled: __props.disabled }, [
    _renderSlot(_ctx.$slots, "default")
  ], 8 /* PROPS */, ["disabled"]))
}
}

})
