tests/snapshots/sfc/ts/script_setup__script_setup_before_script.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

import { ref } from 'vue'

export const n = 1
const __default__ = {}

export default /*@__PURE__*/Object.assign(__default__, {
  __name: 'test',
  setup(__props) {

const count = ref(0)

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(count.value) + " " + _toDisplayString(n), 1 /* TEXT */))
}
}

})
